# quine-mccluskey-optimization

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  IDEAS.md  README.md  debug.h  generate_merge_order.py  generate_path.py  main.c  measure.sh  measure_for_plots.sh  measure_individual_impl.sh  measure_merge.sh  measure_multiple_impl.sh  performance_plot.py  performance_plot_merge.py  plot.ipynb  plot.py  plot_2.py  plot_hellman_with_avx2_ops.py  plot_merge.py  plot_multiple.py  plot_multiple_custom_colors.py  plot_multiple_directory.py  plot_multiple_random_colors.py  presentation-template.pptx  runitme.sh  types.h  useful_links.txt
aleksa/: regular_bits_sp_8  regular_bits_sp_9
figures/first_difference_semantics/: figure.tex
figures/large_block_size/: figure.tex
figures/sections/: figure.tex
figures/shift_or_mask/: figure.tex
figures/small_block_size/: figure.tex
other_implementations/: implementation_list.md
other_implementations/02_Singapore/: implementation.c
other_implementations/04_Multiple_implementation_paper/: variant1.c  variant2.c
playground/: chunk_size_calc.py  chunk_sizes.txt  chunking_cache.py  dfs_animate.py  dfs_log10.txt  generate_all_minterms.py  kernel.py  perf_binary.sh  plot_csv_column.py  regular_bits_sp_7  section_percentage.py
python-naive-verification-implementation/: prime_implicants_output.txt  test.py
scripts/: pre-commit
src/: bitmap.c  bitmap.h  debug.c  debug.h  dense.c  dense.h  implicant.c  implicant.h  kperf.h  main.c  my_signpost.h  perf.c  perf.h  signpost.h  sparse.c  sparse.h  system.c  system.c.in  system.h  test.c  test.h  types.c  types.h  util.c  util.h  vct_arm.h  vtune.c  vtune.h
src/implementations/: avx2.c  avx2.h  avx2_single_pass.c  avx2_single_pass.h  avx2_sp.c  avx2_sp.h  avx2_sp_aleksa.c  avx2_sp_aleksa.h  avx2_sp_aljaz.c  avx2_sp_aljaz.h  avx2_sp_ilp.c  avx2_sp_ilp.h  avx2_sp_load_block.c  avx2_sp_load_block.h  avx2_sp_load_block16.c  avx2_sp_load_block16.h  avx2_sp_load_block2.c  avx2_sp_load_block2.h  avx2_sp_load_block4.c  avx2_sp_load_block4.h  avx2_sp_load_block8.c  avx2_sp_load_block8.h  avx2_sp_load_shuffle.c  avx2_sp_load_shuffle.h  avx2_sp_load_unroll.c  avx2_sp_load_unroll.h  avx2_sp_richard.c  avx2_sp_richard.h  avx2_sp_shuffle.c  avx2_sp_shuffle.h  avx2_sp_ssa.c  avx2_sp_ssa.h  avx2_sp_unroll.c  avx2_sp_unroll.h  avx2sp_dfs.c  avx2sp_dfs.h  avx512_sp.c  avx512_sp.h  avx512_sp_block.c  avx512_sp_block.h  (+91 more)
src/implementations/algorithms/: base.h  dfs_sp.h  load_sp.h  load_sp_dfs.h  sp.h
src/implementations/merge/: avx2.h  avx2_sp.h  avx2_sp_aleksa.h  avx2_sp_aljaz.h  avx2_sp_block.h  avx2_sp_ilp.h  avx2_sp_richard.h  avx2_sp_shuffle.h  avx2_sp_ssa.h  avx2_sp_unroll.h  avx512_sp.h  avx512_sp_block.h  avx512_sp_block_old.h  avx512_sp_old_loop.h  avx512_sp_unroll.h  avx512_sp_unroll_compress.h  bits.h  bits_sp.h  bits_sp_block.h  bits_sp_unroll.h  native_sp.h  neon.h  neon_sp.h  neon_sp_block.h  pext.h  pext_sp.h  pext_sp_block.h  pext_sp_unroll.h  pext_sp_unroll_ilp.h
tests/: all_minterms.txt  all_minterms_7.txt  half_minterms.txt  matrix_gen.sh  no_minterms.txt  test_all.sh  tester.py  upper_minterms.txt  wikipedia.txt  wikipedia2.txt
tests/gen_tests/: rnd-10-10.txt  rnd-10-20.txt  rnd-10-40.txt  rnd-10-50.txt  rnd-10-70.txt  rnd-10-90.txt  rnd-11-10.txt  rnd-11-100.txt  rnd-11-20.txt  rnd-11-40.txt  rnd-11-50.txt  rnd-11-70.txt  rnd-11-99.txt  rnd-12-10.txt  rnd-12-20.txt  rnd-12-40.txt  rnd-13-10.txt  rnd-13-20.txt  rnd-13-40.txt  rnd-14-10.txt  rnd-14-20.txt  rnd-15-10.txt  rnd-16-10.txt  rnd-17-10.txt  rnd-19-0.5.txt  rnd-20-0.5.txt  rnd-21-0.1.txt  rnd-21-0.5.txt  rnd-21-1.txt  rnd-22-0.1.txt  rnd-22-0.5.txt  rnd-5-10.txt  rnd-5-20.txt  rnd-5-40.txt  rnd-5-50.txt  rnd-5-70.txt  rnd-5-90.txt  rnd-6-10.txt  rnd-6-20.txt  rnd-6-40.txt  (+21 more)
traversals/dfs/: merge_schedule_n10_dfs.txt  merge_schedule_n11_dfs.txt  merge_schedule_n12_dfs.txt  merge_schedule_n13_dfs.txt  merge_schedule_n14_dfs.txt  merge_schedule_n15_dfs.txt  merge_schedule_n16_dfs.txt  merge_schedule_n17_dfs.txt  merge_schedule_n1_dfs.txt  merge_schedule_n2_dfs.txt  merge_schedule_n3_dfs.txt  merge_schedule_n4_dfs.txt  merge_schedule_n5_dfs.txt  merge_schedule_n6_dfs.txt  merge_schedule_n7_dfs.txt  merge_schedule_n8_dfs.txt  merge_schedule_n9_dfs.txt
traversals/flat/: merge_schedule_n10_flat.txt  merge_schedule_n11_flat.txt  merge_schedule_n12_flat.txt  merge_schedule_n13_flat.txt  merge_schedule_n14_flat.txt  merge_schedule_n15_flat.txt  merge_schedule_n16_flat.txt  merge_schedule_n17_flat.txt  merge_schedule_n1_flat.txt  merge_schedule_n2_flat.txt  merge_schedule_n3_flat.txt  merge_schedule_n4_flat.txt  merge_schedule_n5_flat.txt  merge_schedule_n6_flat.txt  merge_schedule_n7_flat.txt  merge_schedule_n8_flat.txt  merge_schedule_n9_flat.txt
vtune-reports/: avx2-hs.csv  avx2-mem.csv  bits-hs.csv  bits-mem.csv  pext-hs.csv  pext-mem.csv
vtune-reports/r011hs/: r011hs avx2 21.vtune
vtune-reports/r011hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
vtune-reports/r011hs/data.0/: 99883-99893.0-99893.0.th  99883-99893.0.trace  99893.stat.perf  perfcmd  sep.events  systemcollector-99883-specter.sc
vtune-reports/r011hs/sqlite-db/: dicer.db
vtune-reports/r012hs/: r012hs pext 21.vtune
vtune-reports/r012hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
vtune-reports/r012hs/data.0/: 101735-101745.0-101745.0.th  101735-101745.0.trace  101745.stat.perf  perfcmd  systemcollector-101735-specter.sc
vtune-reports/r012hs/sqlite-db/: dicer.db
vtune-reports/r013hs/: r013hs bits 21.vtune
vtune-reports/r013hs/config/: analysis_type.cfg  context_values.cfg  log.cfg  runss.options
vtune-reports/r013hs/data.0/: 102183-102193.0-102193.0.th  102183-102193.0.trace  102193.stat.perf  map.events  (+2 more)
vtune-reports/r014macc/: r014macc avx2 21.vtune
vtune-reports/r015macc/: r015macc pext 21.vtune
vtune-reports/r016macc/: r016macc bits 21.vtune
vtune-reports/r027hs/: r027hs avx2sp 22.vtune
vtune-reports/r028hs/: r028hs bits 22.vtune
vtune-reports/r029hs/: r029hs avx2 22.vtune
(+229 files in other folders)
